# fp-lab1

./: .zanuda  README.md  dune-project  labwork1.opam
.github/workflows/: main.yml
go/: 14.go  16.go  go.mod  lib_test.go
lib/: dune  euler14.ml  euler14.mli  euler16.ml  euler16.mli  euler_problems.ml  euler_problems.mli
test/: dune  test_labwork1.ml
